Add JavaFX UI and bare bones .txt save/loading for project requirements